# TekkonCC

./: .gitignore  CHANGELOG_v1.7.0.md  CMakeLists.txt  Package.swift  README.md  format.sh  test.sh
.github/workflows/: continuous-integration-workflow-cmake.yml  continuous-integration-workflow-spm.yml  continuous-integration-workflow-xcode-latest.yml
GTests/: TekkonTest.cc  TekkonTests_Arrangements.cc  TekkonTests_Pinyin.cc  main.cc
Sources/Tekkon/: Tekkon.cc
Sources/Tekkon/include/: Tekkon.hh
Tekkon/: Tekkon.hh  main.cc  main.cpp
TekkonCC.xcodeproj/: project.pbxproj
TekkonCCTest_gtest/: TekkonTest.cc  TekkonTest.cpp
TekkonCCTests/: TekkonCCTests.mm  TekkonCCTests_Advanced.mm  TekkonCCTests_Basic.mm  TekkonCCTests_Intermediate.mm
Tests/TekkonCCTests/: TekkonCCTests_Advanced.mm  TekkonCCTests_Arrangements.mm  TekkonCCTests_Basic.mm  TekkonCCTests_Intermediate.mm  TekkonCCTests_Pinyin.mm
Tests/TestAssets_Tekkon/: TekkonTestData.hh
utils/unittest/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-port.cc  gtest-test-part.cc  gtest.cc
